# NetologyCPPhw

./: .gitignore
1. Linking and compiling/: Linking and compiling.sln
1. Linking and compiling/Linking and compiling/: Linking and compiling.vcxproj  main.cpp
1. OOP/ConsoleApplication1/: ConsoleApplication1.sln
1. OOP/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  out.txt
12. Linking and compiling/: Linking and compiling.sln
12. Linking and compiling/Linking and compiling/: Linking and compiling.vcxproj  main.cpp
13. RAII/: 2. RAII.sln
13. RAII/2. RAII/: allinclude.h
14. Testing/: CMakeLists.txt  first.h  main.cpp
15. Templates and functors/: 4. Templates and functors.sln
15. Templates and functors/4. Templates and functors/: 4. Templates and functors.vcxproj  main.cpp
16. STL ( 1st part )/5. STL ( 1st part )/: allinclude.h
17. STL ( 2nd part )/6. STL ( 2nd part )/: main.cpp
18. Smart pointers/: 7. Smart pointers.sln
18. Smart pointers/7. Smart pointers/: 7. Smart pointers.vcxproj  main.cpp
19. Move/: 19. Move.sln
19. Move/19. Move/: 19. Move.vcxproj  main.cpp
2. Polymorph/main/: main.sln
2. Polymorph/main/main/: first.cpp  first_task.h  main.cpp  main.vcxproj  main.vcxproj.filters  second.cpp  second_task.h  third.cpp  third_task.h
2. RAII/2. RAII/: 2. RAII.vcxproj  2. RAII.vcxproj.filters  FIrstTask.cpp  FirstTask.h  main.cpp
20.Postgres/psqlutil/: CMakeLists.txt
20.Postgres/psqlutil/psqlutil/: CMakeLists.txt  psqlutil.cpp  psqlutil.h
21. ORM/CMakeProject1/: CMakeLists.txt  generate.bat
21. ORM/CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
22. MultiThreading/MultiThreading/: CMakeLists.txt
22. MultiThreading/MultiThreading/MultiThreading/: CMakeLists.txt  FirstTask.cpp  FirstTask.h  MultiThreading.cpp  SecondTask.cpp  SecondTask.h  allinclude.h
23. Race condition/Race condition/: CMakeLists.txt
23. Race condition/Race condition/Race condition/: CMakeLists.txt  FirstTask.cpp  FirstTask.h  Race condition.cpp  SecondTask.cpp  SecondTask.h  ThirdTask.cpp  ThirdTask.h  allinclude.h
24. Async/async/: async.sln
24. Async/async/async/: async.vcxproj  main.cpp
25. Network-dev/Network-Dev/: CMakeLists.txt
25. Network-dev/Network-Dev/Network-Dev/: CMakeLists.txt  TCPclient.cpp  TCPclient.h  TCPserver.cpp  TCPserver.h  UDPclient.cpp  UDPclient.h  UDPserver.cpp  UDPserver.h  allinclude.h  main.cpp
26. Docker/1. First Task/: Dockerfile  Solution.txt
26. Docker/2. Second Task/: Dockerfile.clang  Dockerfile.gcc  Makefile  Solution.txt  main.cpp
27. Safe Queue/Project1/: Project1.sln
27. Safe Queue/Project1/Project1/: Project1.vcxproj  main.cpp
28. Templates builder, singleton, factory method, etc/Project1/: Project1.sln
28. Templates builder, singleton, factory method, etc/Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  allinclude.h  main.cpp  sql_query_builder.h
29. Proxy, Decorator, Adapter/PDA/: PDA.sln
29. Proxy, Decorator, Adapter/PDA/PDA/: PDA.vcxproj  main.cpp
3. Many files/lesson_homework_1/: lesson_homework.sln
3. Many files/lesson_homework_1/lesson_homework/: lesson_homework.cpp  lesson_homework.vcxproj  lesson_homework.vcxproj.filters  math.cpp  math_custom.h
3. Many files/lesson_homework_2/: lesson_homework_2.sln
3. Many files/lesson_homework_2/lesson_homework_2/: counter.cpp  counter.h  (+3 more)
3. Many files/lesson_homework_3/: lesson_homework_3.sln
3. Testing/3. Testing/: 3. Testing.cpp  3. Testing.h  CMakeLists.txt
30. Command iterator/command_iterator_observer_chain_of_responsobility/: command_iterator_observer_chain_of_responsobility.sln
31. DRY n SOLID/DRY n SOLID/: DRY n SOLID.sln
32. First Qt program/FirstQtprogram/: CMakeLists.txt  mainwindow.ui
33. General modules of Qt/untitled/: CMakeLists.txt  main.cpp
34. DataBase Controller/DataBaseController/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  newconnectiondiaglog.cpp  newconnectiondiaglog.h  newconnectiondiaglog.ui  onlyfortest.cpp  onlyfortest.h  onlyfortest.ui
35. Counter/Counter/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
36. Stopwatch/Stopwatch/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
37. QtConcurrent/PreConcurrent/: CMakeLists.txt  mainwindow.cpp
38. Work with DB/work_with_db/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
4. Macros/Macro/: Macro.sln
4. Templates and functors/4. Templates and functors/: 4. Templates and functors.vcxproj  4. Templates and functors.vcxproj.filters
40. UDP/UDP/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
40. UDP/untitled/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
41. TCP/PreTCPclient/: mainwindow.cpp  tcpclient.cpp
41. TCP/untitled/: CMakeLists.txt  protocol.cpp  protocol.h  tcpclient.cpp  tcpclient.h
42. Qt Finished/untitled/: CMakeLists.txt  bookingdialog.cpp  bookingdialog.h  bookingdialog.ui  bookingsdialog.cpp  bookingsdialog.h  bookingsdialog.ui  dbmanager.cpp  dbmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
43. Diploma/Diploma/: CMakeLists.txt  config.cpp  config.h  config.ini  db.cpp  db.h  hasher.cpp  hasher.h  indexer.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  textnormalizer.cpp  textnormalizer.h
5. Exceptions/exceptions/: exceptions.sln
5. STL ( 1st part )/: 5. STL ( 1st part ).sln
5. STL ( 1st part )/5. STL ( 1st part )/: 5. STL ( 1st part ).vcxproj  main.cpp
6. Overloading/overloading/: overloading.sln
6. STL ( 2nd part )/: 6. STL ( 2nd part ).sln
6. STL ( 2nd part )/6. STL ( 2nd part )/: 6. STL ( 2nd part ).vcxproj  6. STL ( 2nd part ).vcxproj.filters  allinclude.h
7. CMake/first_task/: CMakeLists.txt  main.cpp
7. CMake/second_task/: CMakeLists.txt  EquilateralTriangle.cpp  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Romb.h  Triangle.cpp
8. Building/main/: main.sln
(+59 files in other folders)
